@@ -229,6 +229,8 @@ if test x"$HAVE_TALKFILTERS" = x"yes"; then
 fi
 
 # switchspell
+
+# check for gtkspell
 gtkspell=yes
 PKG_CHECK_MODULES(GTKSPELL, gtkspell-2.0 >= 2.0.2, [], [gtkspell=no])
 AC_SUBST(GTKSPELL_CFLAGS)
@@ -243,6 +245,22 @@ if test x"$gtkspell" = x"yes" ; then
 		BUILD_SWITCH_SPELL=no
 	fi
 fi
+
+# check for aspell
+ASPELL_CFLAGS=""
+ASPELL_LIBS=""
+AC_CHECK_HEADER([aspell.h], HAVE_ASPELL_H=yes, AC_MSG_WARN([
+*** libaspell is required to build the switchspell plugin.])
+HAVE_ASPELL_H=no
+)
+
+if test x"$HAVE_ASPELL_H" = x"yes" ; then
+	AC_CHECK_LIB([aspell], [new_aspell_config], ASPELL_LIBS="-laspell", BUILD_SWITCH_SPELL=no)
+fi
+
+AC_SUBST(ASPELL_CFLAGS)
+AC_SUBST(ASPELL_LIBS)
+
 AM_CONDITIONAL(BUILD_SWITCH_SPELL, test x"$BUILD_SWITCH_SPELL" = x"yes")
 
 # xmmsremote
